artifacthub/library/pod-security-policy/capabilities/1.1.3/samples/psp-capabilities/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: psp-capabilities
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedCapabilities: ["NET_BIND_SERVICE"]
    requiredDropCapabilities: ["ALL"]
