artifacthub/library/pod-security-policy/capabilities/1.1.3/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: capabilities
tests:
  - name: capabilities
    template: template.yaml
    constraint: samples/psp-capabilities/constraint.yaml
    cases:
      - name: example-disallowed
        object: samples/psp-capabilities/example_disallowed.yaml
        assertions:
          - violations: yes
      - name: example-allowed
        object: samples/psp-capabilities/example_allowed.yaml
        assertions:
          - violations: no
      - name: disallowed-ephemeral
        object: samples/psp-capabilities/disallowed_ephemeral.yaml
        assertions:
          - violations: yes
      - name: update
        object: samples/psp-capabilities/update.yaml
        assertions:
          - violations: no
